[gd_scene load_steps=2 format=2]

[ext_resource path="res://Characters/enemy/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPosition_01" type="Position2D" parent="SpawnPositions"]
position = Vector2( 42, 0 )

[node name="SpawnPosition_02" type="Position2D" parent="SpawnPositions"]
position = Vector2( 84, 0 )

[node name="SpawnPosition_03" type="Position2D" parent="SpawnPositions"]
position = Vector2( 126, 0 )

[node name="SpawnPosition_04" type="Position2D" parent="SpawnPositions"]
position = Vector2( 168, 0 )

[node name="SpawnPosition_05" type="Position2D" parent="SpawnPositions"]
position = Vector2( 210, 0 )

[node name="SpawnPosition_06" type="Position2D" parent="SpawnPositions"]
position = Vector2( 252, 0 )

[node name="SpawnPosition_07" type="Position2D" parent="SpawnPositions"]
position = Vector2( 294, 0 )

[node name="SpawnPosition_08" type="Position2D" parent="SpawnPositions"]
position = Vector2( 336, 0 )

[node name="SpawnPosition_09" type="Position2D" parent="SpawnPositions"]
position = Vector2( 378, 0 )

[node name="SpawnPosition_10" type="Position2D" parent="SpawnPositions"]
position = Vector2( 420, 0 )

[node name="SpawnPosition_11" type="Position2D" parent="SpawnPositions"]
position = Vector2( 462, 0 )

[node name="SpawnPosition_12" type="Position2D" parent="SpawnPositions"]
position = Vector2( 504, 0 )

[node name="SpwanTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="SpwanTimer" to="." method="_on_SpwanTimer_timeout"]
